<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#737373"
    tools:context=".MainMenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/corner"
        android:backgroundTint="#1D1D1D">

        <ImageView
            android:id="@+id/score_Logo"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/scoreboard"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/playerName_Logo"
            android:layout_width="190dp"
            android:layout_height="60dp"
            android:layout_below="@id/score_Logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:scaleType="centerInside"
            android:src="@drawable/playername"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/score_Logo"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/sport"
                android:text="Score"
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:fontFamily="@font/sport"
                android:text="Board"
                android:textColor="#DF7336"
                android:textSize="40sp"
                tools:ignore="HardcodedText,RtlHardcoded" />
        </RelativeLayout>

        <EditText
            android:id="@+id/player_Name1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/playerName_Logo"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="Player-1"
            android:background="@drawable/corner"
            android:backgroundTint="@color/white"
            android:digits="@string/NameDigits"
            android:fontFamily="@font/sport"
            android:gravity="center"
            android:hint="@string/player1"
            android:inputType="textFilter"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Player-1"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/player_Name2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/player_Name1"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="player-2"
            android:background="@drawable/corner"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/sport"
            android:gravity="center"
            android:digits="@string/NameDigits"
            android:inputType="textFilter"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Player-2"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/goal"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:layout_below="@id/player_Name2"
            android:layout_centerHorizontal="true"
            android:src="@drawable/goal"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/goal_Setter"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/goal"
            android:layout_centerInParent="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:autofillHints="None"
            android:background="@drawable/corner"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/sport"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/start_Button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/goal_Setter"
            android:layout_centerInParent="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#EAAC81"
            android:fontFamily="@font/sport"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>